# gaussian-regression-demonstration

./: .gitignore  CMakeLists.txt  README.md  angular.json  compile-cpp  gaussian-regression.yumd  karma.conf.js  out.txt  package-lock.json  package.json
src/: index.html  styles.scss  variables.scss
src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts  linalg.service.spec.ts  linalg.service.ts  wasm.service.ts
src/app/components/form/: form.component.html  form.component.ts
src/app/main/: main.component.html  main.component.ts
src/app/utils/: defined-or.ts
src/cpp/: gr.cpp  gr.js  gr.wasm  math.cpp
